--- a/package/DataTableEmptyRow.css
+++ b/package/DataTableEmptyRow.css
@@ -1,6 +1,3 @@
 .mantine-datatable-empty-row {
   background: transparent;
-  :last-of-type td {
-    border-bottom: none;
-  }
 }
